# ml-doi-calibration

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
configs/: default.yaml
docs/: validation_methodology.md
scripts/: run_validation.py
src/pet_doi_ml/: __init__.py  config.py  constants.py  pipeline.py
src/pet_doi_ml/data/: __init__.py  loader.py
src/pet_doi_ml/features/: __init__.py  emulation.py  extraction.py
tests/: test_features.py  test_loader.py  test_package.py
